@@ -40,13 +40,7 @@ Server::Server (QObject *parent):QObject(parent) {
 void Server::newConnection() {
    QTcpSocket* socket = mTcpSrv->nextPendingConnection();
    if (socket == 0) return;
-   qrs::DeviceManager* dmanager = new qrs::DeviceManager;
-   connect(dmanager,SIGNAL(received(QByteArray)),
-           mManager,SLOT(receive(const QByteArray&)));
-   connect(mManager,SIGNAL(send(QByteArray)),
-           dmanager,SLOT(send(const QByteArray&)));
-   dmanager->setParent(socket);
-   dmanager->setDevice(socket);
+   mManager->addDevice(socket);
    mConnectionPool.append(socket);
 }
 
