@@ -7,6 +7,7 @@ env.Tool('qrs')
 env.Append(CPPPATH = ['.','#tests','#qremotesignal'])
 env.EnableQt4Modules(['QtCore','QtTest'])
 env.Append(LIBS = 'qjson')
+env.Append(LIBPATH = '.')
 
 if  not (ARGUMENTS.get('nocheck') or GetOption('clean') or GetOption('help') ) :
    conf = Configure(env, custom_tests = qrs_custom_tests)
@@ -15,6 +16,7 @@ if  not (ARGUMENTS.get('nocheck') or GetOption('clean') or GetOption('help') ) :
 
 env.Prepend(LIBPATH='#tests')
 env.Depends( '#tests', env.Install('.',env['QRemoteSignalLib']) )
+env.Depends( '#tests', env.Install('.',env['QrsInternalsLib']) )
 env.Prepend( LIBS='QRemoteSignal' )
 env.Append(LINKFLAGS='-Wl,-rpath=\\$$ORIGIN')
 
@@ -29,9 +31,10 @@ tests = []
 tests.append( env.Program('RemoteSignalTests',Service+Client+['remotesignaltests.cpp']) )
 tests.append( env.Program('ErrorTests',Service+['errortests.cpp']) )
 tests.append( env.Program('ConvertersTests',['converterstests.cpp']) )
-tests.append( env.Program('DeviceManagerTests',['devicemanagertests.cpp']) )
+tests.append( env.Program('DeviceManagerTests',['devicemanagertests.cpp'],
+                          LIBS=['$LIBS','QrsInternals']) )
 tests.append( env.Program('ServicesManagerTests',
-              Service+Client+['servicesmanagertests.cpp']) )
+                          Service+Client+['servicesmanagertests.cpp']) )
 
 tests.append( SConscript('customtypestest/SConscript',exports='env') )
 tests.append( SConscript('serializers/SConscript',exports='env') )
